# Teste

./: CMakeLists.txt  venom.upm
editor/: CMakeLists.txt
editor/src/: upm_generator.cpp
engine/: CMakeLists.txt
engine/include/assets/: AssetManager.h  UPM_Format.h  UPM_Parser.h
engine/include/core/: Application.h  Types.h
engine/include/renderer/: Camera.h  Renderer.h
engine/include/simulation/: Animator.h  ShearAnimationComponent.h  WaveAnimationComponent.h  WobbleAnimationComponent.h
engine/include/world/: Body.h  Component.h  ComponentFactory.h  SingularPixelObject.h  World.h
engine/src/assets/: AssetManager.cpp  UPM_Parser.cpp
engine/src/core/: Application.cpp
engine/src/renderer/: Camera.cpp  Renderer.cpp
engine/src/simulation/: Animator.cpp  ShearAnimationComponent.cpp  WaveAnimationComponent.cpp  WobbleAnimationComponent.cpp
engine/src/world/: ComponentFactory.cpp  SingularPixelObject.cpp  World.cpp
sample_game/: CMakeLists.txt
sample_game/src/: main.cpp
